# libs/ledger/infrastructure/api-contract/openapi.yaml
@@ -1,4 +1,4 @@
-openapi: '3.0.0'
+openapi: "3.0.0"
 info:
   version: 1.0.0
   title: Personal Accounting REST API
@@ -8,7 +8,7 @@ paths:
     get:
       description: liveness check - checks if process is deadlocked
       responses:
-        '200':
+        "200":
           description: process is running fine
           content:
             application/json:
@@ -16,13 +16,13 @@ paths:
                 type: object
                 properties:
                   data:
-                    description: ''
+                    description: ""
 
   /api/readyz:
     get:
       description: readiness check - checks if process can handle traffic (also considers downstream dependencies)
       responses:
-        '200':
+        "200":
           description: process is running fine
           content:
             application/json:
@@ -30,14 +30,14 @@ paths:
                 type: object
                 properties:
                   data:
-                    description: ''
+                    description: ""
 
   /api/v1/accounting/ledger_accounts:
     get:
       tags: [accounting]
       summary: List all ledger accounts
       responses:
-        '200':
+        "200":
           description: 200 OK - Success Response
           content:
             application/json:
@@ -47,7 +47,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/LedgerAccount'
+                      $ref: "#/components/schemas/LedgerAccount"
 
   # TODO: add filter for BETWEEN dates and BY account_id
   /api/v1/accounting/postings:
@@ -55,7 +55,7 @@ paths:
       tags: [accounting]
       summary: List all postings
       responses:
-        '200':
+        "200":
           description: 200 OK - Success Response
           content:
             application/json:
@@ -65,7 +65,7 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Posting'
+                      $ref: "#/components/schemas/Posting"
 
   # TODO: add filters for IN posting_ids (comma separated)
   /api/v1/accounting/entries:
@@ -73,7 +73,7 @@ paths:
       tags: [accounting]
       summary: List all entries
       responses:
-        '200':
+        "200":
           description: 200 OK - Success Response
           content:
             application/json:
@@ -83,7 +83,52 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Entry'
+                      $ref: "#/components/schemas/Entry"
+
+  /api/v1/accounting/entries/{entry_id}:
+    put:
+      operationId: UpdateAccountingEntry
+      tags: [accounting]
+      summary: Partial update of a ledger entry
+      parameters:
+        - name: entry_id
+          in: path
+          required: true
+          schema:
+            type: string
+      requestBody:
+        description: "replace entry object with new values"
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/Entry'
+      responses:
+        "200":
+          description: Entry updated successfully
+          content:
+            application/json:
+              schema:
+                type: object
+        "400":
+          description: Bad Request
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ErrorResponse'
+        "404":
+          description: Entry not found
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/ErrorResponse'
+        "500":
+          description: Server Side Error
+          content:
+            application/json:
+              schema:
+                allOf:
+                  - $ref: '#/components/schemas/ErrorResponse'
 
   /api/v1/accounting/transactions:
     get:
@@ -92,22 +137,22 @@ paths:
       parameters:
         - name: start_date
           in: query
-          description: 'Filter transactions from this date (inclusive). Format: YYYY-MM-DD'
+          description: "Filter transactions from this date (inclusive). Format: YYYY-MM-DD"
           required: false
           schema:
             type: string
             format: date
-            example: '2026-01-01'
+            example: "2026-01-01"
         - name: end_date
           in: query
-          description: 'Filter transactions until this date (inclusive). Format: YYYY-MM-DD'
+          description: "Filter transactions until this date (inclusive). Format: YYYY-MM-DD"
           required: false
           schema:
             type: string
             format: date
-            example: '2026-01-31'
+            example: "2026-01-31"
       responses:
-        '200':
+        "200":
           description: 200 OK - Success Response
           content:
             application/json:
@@ -117,13 +162,13 @@ paths:
                   data:
                     type: array
                     items:
-                      $ref: '#/components/schemas/Transaction'
+                      $ref: "#/components/schemas/Transaction"
 
     post:
       tags: [accounting]
       summary: Create transaction
       responses:
-        '201':
+        "201":
           description: Created
 
   /api/v1/accounting/transactions/{transaction_id}:
@@ -143,14 +188,14 @@ paths:
               required: [date, description, entries]
               properties:
                 date: { type: string, format: date }
-                description: { type: string, example: 'Starbucks (Corrected)' }
+                description: { type: string, example: "Starbucks (Corrected)" }
                 entries:
                   type: array
                   minItems: 1
                   items:
-                    $ref: '#/components/schemas/TransactionEntry'
+                    $ref: "#/components/schemas/TransactionEntry"
       responses:
-        '200':
+        "200":
           description: Transaction updated successfully
 
   /api/v1/accounting/accounts/info:
@@ -158,14 +203,14 @@ paths:
       tags: [accounting]
       summary: Balance and health check
       responses:
-        '200':
+        "200":
           description: ...
           content:
             application/json:
               schema:
                 type: array
                 items:
-                  $ref: '#/components/schemas/AccountStatus'
+                  $ref: "#/components/schemas/AccountStatus"
 
 components:
   schemas:
@@ -192,14 +237,14 @@ components:
       description: Double-entry accounting ledger posting (journal entry)
       required:
         - id
+        - transacted_at
         - description
         - system_notes
-        - transacted_at
       properties:
         id: { type: string }
+        transacted_at: { type: string, format: date }
         description: { type: string }
         system_notes: { type: string }
-        transacted_at: { type: string, format: date }
 
     Entry:
       type: object
@@ -232,7 +277,7 @@ components:
         entries:
           type: array
           items:
-            $ref: '#/components/schemas/TransactionEntry'
+            $ref: "#/components/schemas/TransactionEntry"
 
     TransactionEntry:
       description: Double-entry accounting entry - debit / credit
@@ -260,12 +305,12 @@ components:
         balance: { type: integer }
         is_balanced:
           type: boolean
-          description: 'False if the sum of all transaction legs for this account is inconsistent'
+          description: "False if the sum of all transaction legs for this account is inconsistent"
         warnings:
           type: array
           items: { type: string }
           example:
-            ['Uncategorized offset detected', 'Transaction #452 is unbalanced']
+            ["Uncategorized offset detected", "Transaction #452 is unbalanced"]
 
     ErrorResponse: # RFC9457 (loosely)
       type: object
@@ -292,5 +337,5 @@ components:
           description: A human-readable explanation specific to this occurence.
         instance:
           type: string
-          format: string
+          format: uri
           description: A URI reference for this specific occurence (e.g. trace ID)
